src/test/resources/de/cd4analysis/cocos/valid/U0440.cd
package de.cd4analysis.cocos;

classdiagram U0440 {
  class A;
  class B;

  // valid  
  association assoc4 A->B;
  association assoc5 A<->B;
  association assoc6 A<-B;
}
