src/test/resources/de/cd4analysis/cocos/invalid/B.cd
package de.cd4analysis.cocos;

classdiagram A {
  class C {
    String a;
    String a;
  }
}